fixed panel not 4-dimension panels not centered

--- a/view/main.css
+++ b/view/main.css
@@ -4,7 +4,7 @@ body, html {
 	background-color: rgb(250,248,239);
 }
 
-#content {
+#content, body table{
 	display: flex;
 	justify-content: center;
 }
